--- a/api-stuff-unknown/Dockerfile
+++ b/api-stuff-unknown/Dockerfile
@@ -1,5 +1,8 @@
 FROM openfoam/openfoam11-paraview510
 
+# Switch to root user for installations
+USER root
+
 # Install Python and dependencies
 RUN apt-get update && apt-get install -y \
     python3 \
@@ -11,10 +14,10 @@ WORKDIR /app
 
 # Copy Python requirements
 COPY requirements.txt .
-RUN pip3 install -r requirements.txt
+RUN pip3 install --no-cache-dir -r requirements.txt
 
 # Copy application code
-COPY . .
+COPY server.py .
 
 # Create OpenFOAM case directory
 RUN mkdir -p /app/cases
