--- a/hugging-face-api/Dockerfile
+++ b/hugging-face-api/Dockerfile
@@ -1,12 +1,27 @@
-FROM openfoam/openfoam11-paraview510
+# Alternative Dockerfile if openfoam base image continues to cause issues
+# This installs OpenFOAM from scratch on Debian
 
-# Switch to root user for installations
+FROM debian:bookworm-slim
+
 USER root
 
-# Install Python and dependencies
+# Install dependencies
 RUN apt-get update && apt-get install -y \
+    wget \
+    software-properties-common \
+    apt-transport-https \
+    ca-certificates \
+    gnupg \
     python3 \
     python3-pip \
+    && rm -rf /var/lib/apt/lists/*
+
+# Add OpenFOAM repository
+RUN wget -q -O - https://dl.openfoam.com/add-debian-repo.sh | bash
+
+# Install OpenFOAM
+RUN apt-get update && apt-get install -y \
+    openfoam2312-default \
     && rm -rf /var/lib/apt/lists/*
 
 # Set working directory
@@ -14,7 +29,7 @@ WORKDIR /app
 
 # Copy Python requirements
 COPY requirements.txt .
-RUN pip3 install --no-cache-dir -r requirements.txt
+RUN pip3 install --no-cache-dir --break-system-packages -r requirements.txt
 
 # Copy application code
 COPY server.py .
@@ -22,9 +37,8 @@ COPY server.py .
 # Create OpenFOAM case directory
 RUN mkdir -p /app/cases
 
-# Hugging Face Spaces uses port 7860 by default
+# Expose port
 EXPOSE 7860
 
 # Source OpenFOAM environment and start server
-# Note: Hugging Face sets PORT env variable to 7860
-CMD ["/bin/bash", "-c", "source /opt/openfoam11/etc/bashrc && python3 server.py"]
+CMD ["/bin/bash", "-c", "source /usr/lib/openfoam/openfoam2312/etc/bashrc && python3 server.py"]
